<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/card_name"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteDark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/additionalExitText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_card_description"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/additionalInfoButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_additional_info"
            android:contentDescription="@string/add_additional_info"
            android:backgroundTint="@color/transparent"/>

        <CheckBox
            android:id="@+id/favouriteCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_favorite"
            android:checked="false"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/createTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/white"
            android:background="@color/transparent"/>


    </LinearLayout>

</LinearLayout>